/*
Copyright 2017 Luke Granger-Brown

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package captivated;

service Captivate {
	// Informs Captivate that a new client has appeared.
	rpc SawClient(SawClientRequest) returns (SawClientReply) {}

	// Informs Captivate that a client has authenticated.
	rpc ClientAuthenticated(ClientAuthenticatedRequest) returns (ClientAuthenticatedReply) {}
}

message SawClientRequest {
	string mac = 1;
}

message SawClientReply {}

message ClientAuthenticatedRequest {
	string mac = 1;
	string email = 2;
}

message ClientAuthenticatedReply {}
